Fix landing page text align

--- a/main.css
+++ b/main.css
@@ -253,7 +253,7 @@ dd p {
 	padding-right: 2.5em;
 	box-sizing: border-box;
 	font-size: 1.5em;
-	box-sizing: border-box;
+	text-align: center;
 	/* background: var(--bg-color);
 	border: 1px solid var(--line-color);
 	border-radius: var(--border-radius);
